examples/fail/opt.xyz
8
Properties=species:S:1:pos:R:3 energy=-304.32906 dipole="0.15052450378900442 -0.2562872256767143 -0.1857093463067662" pbc="F F F"
C       -0.01782000       1.46436000       0.01009000
C        0.00209000       0.00951000       0.00201000
H        1.06153234      -0.17657661      -0.76355110
H        0.71661206       0.56428392      -0.83886669
H       -0.43645368       0.38601291       0.96772137
H        0.27788521       1.00395444      -0.33813883
H        1.03144440      -0.36792300       0.42133497
H       -0.50003867      -0.37026099      -1.02286616
